 -- Added local.cpp hook to affect INFO and populate Patches: line
    with other compile-time switches besides WOD_REALMS (Issue 51).
 -- Fix unlikely memory leak if executor of a queue task happens to be
    a bad object by the time the queued entry is executed.
 -- Prevent @ccreate from creating channels with duplicate names (Issue
    206).
 -- Wizhelp SUSPECT should describe that all commands from SUSPECT-set
    players are logged as controlled by the 'log' configuration option
    (Issue 199).
 -- @moniker without any argument gave 'I don't see that here.'
    followed by 'Permission denied.' (Issue 40).
 -- Update PATCHES file (Issue 189).
 -- RxLevel and TxLevel were reversed in @examine leading to much
    confusion in using reality levels (Issue 62).


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~

 -- In MEMORY_BASED, avoid malloc() call each time an attribute is
    added to an object.
 -- Optimize atr_add_raw_LEN() to reduce Firan load time from 40 seconds
    to 15 seconds (which includes firan.db, mail.db, and comsys.db).
    This translates to something upward of 28 MB/s.
 -- Optimize do_comsystem() ability to recognize what is not an alias.
    Alierak.
 -- Added reference counting to global registers which should improve
    performance and greatly reduce memory usage for games which use the
    queue heavily.
 -- Issue 207: Maintain message length in mail bag to avoid touching
    mail body.
 -- Issue 201: Trim priority queue data structures during @dbck to save
    memory.


Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Increased width of certain columns in @list hashstats (Requests,
    Hits, and Checks) and @list allocations (Allocs).


Miscellaneous:
~~~~~~~~~~~~~
 -- Add mux_fopen() utility function to replace direct use of fopen().
 -- Updated config.guess, config.sub, and configure to later versions.
 -- Updated to autoconf 2.60a.
 -- Refer to tinymux.org instead of tinymux.com.
 -- Added SQL readme (Issue 47).
 -- Updated to doxygen 1.5.1.