@@ -3274,12 +3274,12 @@ static FUNCTION(fun_strmem)
     UNUSED_PARAMETER(cargs);
     UNUSED_PARAMETER(ncargs);
 
-   size_t n = 0;
-   if (nfargs >= 1)
-   {
-       n = strlen(fargs[0]);
-   }
-   safe_ltoa(static_cast<long>(n), buff, bufc);
+    size_t n = 0;
+    if (nfargs >= 1)
+    {
+        n = strlen(fargs[0]);
+    }
+    safe_ltoa(static_cast<long>(n), buff, bufc);
 }
 
 static FUNCTION(fun_num)
@@ -4636,11 +4636,11 @@ static FUNCTION(fun_hasrxlevel)
         {
             safe_chr('0', buff, bufc);
         }
-   }
-   else
-   {
+    }
+    else
+    {
         safe_str("#-1 PERMISSION DENIED", buff, bufc);
-   }
+    }
 }
 
 static FUNCTION(fun_hastxlevel)
@@ -4670,33 +4670,44 @@ static FUNCTION(fun_hastxlevel)
         {
              safe_chr('0', buff, bufc);
         }
-   }
-   else
-   {
+    }
+    else
+    {
         safe_str("#-1 PERMISSION DENIED", buff, bufc);
-   }
+    }
 }
 
 static FUNCTION(fun_listrlevels)
 {
-   int i, add_space, cmp_x, cmp_y, cmp_z;
+    int i, add_space;
 
-   cmp_x = sizeof(mudconf.reality_level);
-   cmp_y = sizeof(mudconf.reality_level[0]);
-   if ( cmp_y == 0 )
-      cmp_z = 0;
-   else
-      cmp_z = cmp_x / cmp_y;
-   if ( mudconf.no_levels < 1 ) {
-      safe_str("#-1 NO REALITY LEVELS DEFINED", buff, bufc);
-   } else {
-      for (add_space = i = 0; (i < mudconf.no_levels) && (i < cmp_z); ++i) {
-         if(add_space)
-            safe_chr(' ', buff, bufc);
-         safe_str(mudconf.reality_level[i].name, buff, bufc);
-         add_space = 1;
-      }
-   }
+    int cmp_z;
+    int cmp_x = sizeof(mudconf.reality_level);
+    int cmp_y = sizeof(mudconf.reality_level[0]);
+    if (0 == cmp_y)
+    {
+        cmp_z = 0;
+    }
+    else
+    {
+        cmp_z = cmp_x / cmp_y;
+    }
+    if (mudconf.no_levels < 1)
+    {
+        safe_str("#-1 NO REALITY LEVELS DEFINED", buff, bufc);
+    }
+    else
+    {
+        for (add_space = i = 0; i < mudconf.no_levels && i < cmp_z; i++)
+        {
+            if (add_space)
+            {
+                safe_chr(' ', buff, bufc);
+            }
+            safe_str(mudconf.reality_level[i].name, buff, bufc);
+            add_space = 1;
+        }
+    }
 }
 
 static FUNCTION(fun_rxlevel)
@@ -6153,8 +6164,13 @@ static FUNCTION(fun_iter)
     }
     bool first = true;
     int number = 0;
-    mudstate.itext[mudstate.in_loop] = NULL;
-    mudstate.inum[mudstate.in_loop] = number;
+    bool bLoopInBounds = (  0 <= mudstate.in_loop
+                         && mudstate.in_loop < MAX_ITEXT);
+    if (bLoopInBounds)
+    {
+        mudstate.itext[mudstate.in_loop] = NULL;
+        mudstate.inum[mudstate.in_loop] = number;
+    }
     mudstate.in_loop++;
     while (  cp
           && mudstate.func_invk_ctr < mudconf.func_invk_lim
@@ -6167,8 +6183,11 @@ static FUNCTION(fun_iter)
         first = false;
         number++;
         char *objstring = split_token(&cp, &sep);
-        mudstate.itext[mudstate.in_loop-1] = objstring;
-        mudstate.inum[mudstate.in_loop-1]  = number;
+        if (bLoopInBounds)
+        {
+            mudstate.itext[mudstate.in_loop-1] = objstring;
+            mudstate.inum[mudstate.in_loop-1]  = number;
+        }
         char *buff2 = replace_tokens(fargs[1], objstring, mux_ltoa_t(number),
             NULL);
         str = buff2;
@@ -6177,8 +6196,11 @@ static FUNCTION(fun_iter)
         free_lbuf(buff2);
     }
     mudstate.in_loop--;
-    mudstate.itext[mudstate.in_loop] = NULL;
-    mudstate.inum[mudstate.in_loop] = 0;
+    if (bLoopInBounds)
+    {
+        mudstate.itext[mudstate.in_loop] = NULL;
+        mudstate.inum[mudstate.in_loop] = 0;
+    }
     free_lbuf(curr);
 }
 
@@ -6257,8 +6279,13 @@ static FUNCTION(fun_list)
         return;
     }
     int number = 0;
-    mudstate.itext[mudstate.in_loop] = NULL;
-    mudstate.inum[mudstate.in_loop] = number;
+    bool bLoopInBounds = (  0 <= mudstate.in_loop
+                         && mudstate.in_loop < MAX_ITEXT);
+    if (bLoopInBounds)
+    {
+        mudstate.itext[mudstate.in_loop] = NULL;
+        mudstate.inum[mudstate.in_loop] = number;
+    }
     mudstate.in_loop++;
     while (  cp
           && mudstate.func_invk_ctr < mudconf.func_invk_lim
@@ -6266,8 +6293,11 @@ static FUNCTION(fun_list)
     {
         number++;
         objstring = split_token(&cp, &sep);
-        mudstate.itext[mudstate.in_loop-1] = objstring;
-        mudstate.inum[mudstate.in_loop-1]  = number;
+        if (bLoopInBounds)
+        {
+            mudstate.itext[mudstate.in_loop-1] = objstring;
+            mudstate.inum[mudstate.in_loop-1]  = number;
+        }
         char *buff2 = replace_tokens(fargs[1], objstring, mux_ltoa_t(number),
             NULL);
         dp = result = alloc_lbuf("fun_list.2");
@@ -6280,8 +6310,11 @@ static FUNCTION(fun_list)
         free_lbuf(result);
     }
     mudstate.in_loop--;
-    mudstate.itext[mudstate.in_loop] = NULL;
-    mudstate.inum[mudstate.in_loop] = 0;
+    if (bLoopInBounds)
+    {
+        mudstate.itext[mudstate.in_loop] = NULL;
+        mudstate.inum[mudstate.in_loop] = 0;
+    }
     free_lbuf(curr);
 }
 
@@ -8420,20 +8453,32 @@ static FUNCTION(fun_config)
 //
 static int return_bit(dbref player)
 {
-   if (God(player))
-      return 7;
-   // 6 is Rhost Immortal. We don't have an equivalent (yet?).
-   if (Wizard(player))
-      return 5;
-   if (Royalty(player))
-      return 4;
-   if (Staff(player) || Builder(player))
-      return 3;
-   if (Head(player) || Immortal(player))
-      return 2;
-   if (!(Uninspected(player) || Guest(player)))
-      return 1;
-   return 0;
+    if (God(player))
+    {
+        return 7;
+    }
+    // 6 is Rhost Immortal. We don't have an equivalent (yet?).
+    if (Wizard(player))
+    {
+        return 5;
+    }
+    if (Royalty(player))
+    {
+        return 4;
+    }
+    if (Staff(player) || Builder(player))
+    {
+        return 3;
+    }
+    if (Head(player) || Immortal(player))
+    {
+        return 2;
+    }
+    if (!(Uninspected(player) || Guest(player)))
+    {
+        return 1;
+    }
+    return 0;
 }
 
 static FUNCTION(fun_bittype)
