@@ -235,6 +235,13 @@ Bug Fixes:
  -- Update PATCHES file (Issue 189).
  -- RxLevel and TxLevel were reversed in @examine leading to much
     confusion in using reality levels (Issue 62).
+ -- Added separate recursion limit protection on nesting of iter() and
+    list() (Issue 216). MAX_ITEXT is 100, but raising the function
+    recursion limit above that leaves iter() and list() open to step
+    on nearby mudstate structures including help and global_registers.
+ -- Disable WHO in Firan build (Issue 218).
+ -- Fixed crash due to failure to clear @program data after logout
+    (Issue 217).  Found and fixed by Alierak.
 
 
 Performance Enhancements:
